Flickering Fixed
- found an obscure issue in webkit that causes a flicker and font weights to become thinner when using @fontface. The issue is triggered by a z-index. Still not sure if it was because of a - index or if a positive triggers the same issue.

--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,6 @@ img.retina {
 
 img.awwwshadow {
 	position: absolute;
-	z-index: -1;
 }
 
 img.awwwicon {
